[project]
name = "youtube-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "langchain[openai]>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langgraph>=0.5.0",
    "langgraph-cli[inmem]>=0.3.3",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
]
